--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     type="text/css">
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" />
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Dancing+Script" />
-  <link rel="apple-touch-icon" href="logo192.png" />
+  <!-- <link rel="apple-touch-icon" href="logo192.png" /> -->
 
   <!--
       manifest.json provides metadata used when your web app is installed on a
